hphp/hack/test/typecheck/construct/lateinit/lateinit4.php.legacy_decl.exp
File "lateinit4.php", line 5, characters 18-21:
A late-initialized property cannot have a default value (Typing[4277])
File "lateinit4.php", line 7, characters 27-30:
A late-initialized property cannot have a default value (Typing[4277])
