hphp/hack/test/typecheck/construct/lateinit/lateinit4.php
<?hh

final class C {
  <<__LateInit>>
  private string $foo = 'foo';
  <<__LateInit>>
  protected static string $bar = 'bar';
}
